specs/001-typescript-to-zig-native/examples/valid/block-shadow.ts
let value = 1;

if (true) {
  let value = 2;
  console.log(value);
}

console.log(value);
