specs/001-typescript-to-zig-native/examples/invalid/bool-operator-type.ts
if (1 && true) {
  console.log("bad");
}
